# gold360

./: .gitignore  README.md
gold360_v3/: ARCHITECTURE.md  CONFIGURATION.md  DATA_LINEAGE.md  FEATURE_REGISTRY.md  LICENSE.md  MODEL_EVALUATION_REPORT.md  README.md  launch_gold360.bat  pyproject.toml  run_dashboard.py  run_streamlit.bat
gold360_v3/config/: data_sources.yaml  default.yaml  features.yaml
gold360_v3/data/raw/: fgr_buying_offices.csv  fgr_gold_deliveries_quarterly_verified_zimbabwe_2020_2021.csv  fx_market_annual.csv  gold360_synthetic_data_dictionary.csv  gold_exports_annual.csv  gold_mirror_trade_discrepancy_zimbabwe_2020_2024.csv  gold_price_monthly.csv  gold_smuggling_incident_log_zimbabwe_2020_2025.csv  inflation_annual.csv  rainfall_province_monthly_zimbabwe_2020_2025.csv  synthetic_mine_ops_monthly_zimbabwe_2020_2025.csv  zimbabwe_gold_policy_event_intelligence_2020_2025.csv  zimbabwe_inflation_imf_avg_cpi_annual_2010_2025.csv  zimbabwe_primary_energy_consumption_annual_2020_2024.csv  zimstat_gold_production_quarterly_zimbabwe_2020_2025.csv
gold360_v3/gold360/: __init__.py
gold360_v3/gold360/anomaly/: __init__.py  calibration.py  ecod.py  ensemble.py  isolation_forest.py  lof.py
gold360_v3/gold360/dashboard/: app.py  config.py  report_loader.py  theme.py
gold360_v3/gold360/data/: loader.py  (+6 more)
gold360_v3/reports/: V2_vs_V3_comparison.md  ablation_results.json  benchmark_results.json  cross_validation.json  feature_importance.json  leakage_and_overfitting.json  pr_curve.json  predictions.json  robustness_results.json  roc_curve.json  split_info.json  temporal_validation.json  test_metrics.json
gold360_v3/scripts/: generate_pack_figures.py  generate_thesis_figures.py
gold360_v3/tests/: __init__.py  conftest.py
(+188 files in other folders)
