[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gold360"
version = "0.1.0"
description = "Hybrid Economic Intelligence + Weakly Supervised Anomaly Detection + Policy Intelligence Platform for Zimbabwe's Gold Ecosystem"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "GOLD360 Research", email = "research@gold360.ai"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "pydantic>=2.0",
    "catboost>=1.2",
    "xgboost>=1.7",
    "scikit-learn>=1.3",
    "shap>=0.42",
    "plotly>=5.15",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "streamlit>=1.28",
    "streamlit-aggrid>=0.3",
    "folium>=0.14",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "mlflow>=2.5",
    "pyod>=1.1",
    "joblib>=1.3",
    "pyarrow>=12.0",
    "fastparquet>=2023.10",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "hypothesis>=6.80",
]

[project.optional-dependencies]
dev = [
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.6",
    "pre-commit>=3.5",
]
notebook = [
    "jupyter>=1.0",
    "ipykernel>=6.25",
]

[tool.setuptools.packages.find]
include = ["gold360*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
